# whatsapp-linux

./: .gitignore  Cargo.toml  Containerfile  PKGBUILD  README.md  UPDATE.md  build-in-container.sh  build_arch.sh  build_rpm.sh  flake.nix  install.sh  run-in-container.sh  whatsapp.desktop
src/: main.rs
