[package]
name = "whatsapp-desktop"
version = "0.1.0"
edition = "2021"
description = "A desktop wrapper for WhatsApp Web using wry"

[dependencies]
wry = "0.47"
tao = "0.30"
image = "0.25"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gtk = "0.18"
gdk = "0.18"
gdk-pixbuf = "0.18"
glib = "0.20"
gio = "0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
